--- a/app/src/main/res/layout/activity_main_bottom.xml
+++ b/app/src/main/res/layout/activity_main_bottom.xml
@@ -11,8 +11,15 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentBottom="true"
         android:id="@+id/bnView"
-        android:background="@color/white"
+        android:background="@color/MidBlue"
         app:menu="@menu/nav_items"
+        android:layout_margin="@dimen/_20sdp"
+        android:elevation="@dimen/_20sdp"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
+        app:labelVisibilityMode="selected"
+        app:itemIconSize="@dimen/_18sdp"
+        app:itemActiveIndicatorStyle="@color/MidBlue"
         />
     <FrameLayout
         android:layout_width="match_parent"
