--- a/app/src/main/res/layout/activity_main_bottom.xml
+++ b/app/src/main/res/layout/activity_main_bottom.xml
@@ -7,20 +7,22 @@
     tools:context=".MainBottomActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bnView"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentBottom="true"
-        android:id="@+id/bnView"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:background="@color/MidBlue"
-        app:menu="@menu/nav_items"
-        android:layout_margin="@dimen/_20sdp"
         android:elevation="@dimen/_20sdp"
+        app:itemActiveIndicatorStyle="@color/MidBlue"
+        app:itemIconSize="@dimen/_18sdp"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
         app:labelVisibilityMode="selected"
-        app:itemIconSize="@dimen/_18sdp"
-        app:itemActiveIndicatorStyle="@color/MidBlue"
-        />
+        app:menu="@menu/nav_items" />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
