--- a/app/src/main/res/layout/fragment_question_papers.xml
+++ b/app/src/main/res/layout/fragment_question_papers.xml
@@ -11,7 +11,7 @@
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
-        android:text="FE"
+        android:text="First Year "
         app:cornerRadius="@dimen/_10sdp"
         android:textSize="@dimen/_25ssp"
         android:id="@+id/fe_btn"
@@ -30,7 +30,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:backgroundTint="#5EBDE8"
-        android:text="SE"
+        android:text="Second Year"
         android:textSize="@dimen/_25ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +46,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:backgroundTint="#5EBDE8"
-        android:text="TE"
+        android:text="Third Year"
         android:textSize="@dimen/_25ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,7 +62,7 @@
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:backgroundTint="#5EBDE8"
-        android:text="BE"
+        android:text="Final Year"
         android:textSize="@dimen/_25ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
