--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -2,19 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/setting"
-        android:title="Settings"
-        android:icon="@drawable/setting"
-        />
-
-    <item
         android:id="@+id/questionpaper"
         android:title="Question Papers"
         android:icon="@drawable/questionpaper"
         />
+
     <item
         android:id="@+id/gemini"
         android:title="Gemini Ai"
         android:icon="@drawable/gemini"
         />
+    <item
+        android:id="@+id/setting"
+        android:title="Settings"
+        android:icon="@drawable/setting"
+        />
 </menu>
+<!--android:id="@+id/setting"
+        android:title="Settings"
+        android:icon="@drawable/setting"-->
