--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:text="About App :"
         android:layout_marginLeft="@dimen/_20ssp"
-        android:layout_marginTop="@dimen/_180sdp"
+        android:layout_marginTop="@dimen/_160sdp"
         android:fontFamily="@font/spacebold"
         android:textSize="@dimen/_20ssp"
         android:textColor="@color/DarkBlue"
@@ -51,7 +51,7 @@
         android:layout_marginLeft="@dimen/_20ssp"
         android:layout_marginTop="@dimen/_10sdp"
         android:fontFamily="@font/spacemid"
-        android:text="The objective of the app is to help students access past question papers easily and use a chatbot for quick answers, making studying more convenient and efficient."
+        android:text="Tthe name SPiCK represents the initials of each team member: S for Sumit, P for Pushpak, i for innovative heads, C for Chaitanya, and K for Kaushik. Together, we bring a diverse range of skills, expertise, and creativity to the table, making StudySparks a truly collaborative project."
         android:textColor="@color/DarkBlue"
         android:layout_marginRight="@dimen/_20sdp"
         android:textSize="@dimen/_15ssp"
