--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,8 +89,8 @@
         android:textSize="@dimen/_12ssp"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_gravity="center"
         android:text="Login"
