--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -37,7 +37,7 @@
         android:drawableLeft="@drawable/user"
         android:drawablePadding="@dimen/_10sdp"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/customshape"
@@ -64,7 +64,7 @@
         android:drawableLeft="@drawable/email"
         android:drawablePadding="@dimen/_10sdp"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:textColor="@color/DarkBlue"
@@ -92,7 +92,7 @@
         android:drawableLeft="@drawable/password"
         android:drawablePadding="@dimen/_10sdp"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:textColor="@color/DarkBlue"
@@ -120,7 +120,7 @@
         android:drawableLeft="@drawable/confirmpass"
         android:drawablePadding="@dimen/_10sdp"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         android:layout_marginHorizontal="@dimen/_30sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/customshape"
@@ -132,8 +132,8 @@
         android:inputType="textPassword"
         />
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_gravity="center"
         android:text="Sign Up"
