--- a/app/src/main/res/layout/fragment_b_e__m_a_i_n_.xml
+++ b/app/src/main/res/layout/fragment_b_e__m_a_i_n_.xml
@@ -5,10 +5,77 @@
     android:layout_height="match_parent"
     tools:context=".BE_MAIN_Fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@drawable/backgroundphoto2"
+        >
+        <TextView
+            android:id="@+id/BranchBECivil"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Civil Engineering"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+        <TextView
+            android:id="@+id/BranchBEComputer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Computer Engineering"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+        <TextView
+            android:id="@+id/BranchBEENTC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Electronics And Telecommunication Engineering"
+            android:textAlignment="center"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+        <TextView
+            android:id="@+id/BranchBEElectrical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Electrical Engineering"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+        <TextView
+            android:id="@+id/BranchBEIT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Information Technology Engineering"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+        <TextView
+            android:id="@+id/BranchBEMechanical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mechanical Engineering"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/spacemid"
+            android:textSize="@dimen/_15ssp"
+            android:textColor="@color/DarkBlue"
+            />
+
+    </LinearLayout>
+
 
 </FrameLayout>
