--- a/app/src/main/res/layout/fragment_question_papers.xml
+++ b/app/src/main/res/layout/fragment_question_papers.xml
@@ -14,8 +14,9 @@
         android:text="First Year "
         app:cornerRadius="@dimen/_10sdp"
         android:textSize="@dimen/_25ssp"
+        android:textColor="@color/white"
         android:id="@+id/fe_btn"
-        android:backgroundTint="#5EBDE8"
+        android:backgroundTint="@color/DarkBlue"
         android:layout_marginHorizontal="@dimen/_30sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +30,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
-        android:backgroundTint="#5EBDE8"
+        android:backgroundTint="@color/DarkBlue"
         android:text="Second Year"
+        android:textColor="@color/white"
         android:textSize="@dimen/_25ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,8 +47,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
-        android:backgroundTint="#5EBDE8"
+        android:backgroundTint="@color/DarkBlue"
         android:text="Third Year"
+        android:textColor="@color/white"
         android:textSize="@dimen/_25ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,9 +64,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginHorizontal="@dimen/_30sdp"
-        android:backgroundTint="#5EBDE8"
+        android:backgroundTint="@color/DarkBlue"
         android:text="Final Year"
         android:textSize="@dimen/_25ssp"
+        android:textColor="@color/white"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/te_btn"
@@ -71,4 +75,5 @@
         app:layout_constraintStart_toStartOf="@+id/te_btn"
         app:layout_constraintTop_toBottomOf="@+id/te_btn"
         app:layout_constraintVertical_bias="0.081" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
